Reuse common configurations (#1892)
* Move common test configs into ktlint-kotlin-common
* Remove "Upload test results" action. Test results can be viewed via Gradle build scan
* Move dev VERSION_NAME logic into ktlint-publication